--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     },
     "homepage": "https://github.com/hg200/restaurant-page#readme",
     "devDependencies": {
+        "css-loader": "^6.8.1",
+        "style-loader": "^3.3.3",
         "webpack": "^5.84.1",
         "webpack-cli": "^5.1.1"
     }
