--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "build": "webpack"
     },
     "repository": {
         "type": "git",
@@ -18,6 +18,7 @@
     "homepage": "https://github.com/hg200/restaurant-page#readme",
     "devDependencies": {
         "css-loader": "^6.8.1",
+        "html-webpack-plugin": "^5.5.1",
         "style-loader": "^3.3.3",
         "webpack": "^5.84.1",
         "webpack-cli": "^5.1.1"
