--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "build": "webpack"
+        "build": "webpack",
+        "watch": "npm-watch",
+        "dev": "webpack serve"
     },
     "repository": {
         "type": "git",
@@ -19,8 +21,10 @@
     "devDependencies": {
         "css-loader": "^6.8.1",
         "html-webpack-plugin": "^5.5.1",
+        "npm-watch": "^0.11.0",
         "style-loader": "^3.3.3",
         "webpack": "^5.84.1",
-        "webpack-cli": "^5.1.1"
+        "webpack-cli": "^5.1.1",
+        "webpack-dev-server": "^4.15.0"
     }
 }
